--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,6 @@ LLM_MODEL=gpt-4o-mini
 RENDER_FPS=30
 DEFAULT_WIDTH=1920
 DEFAULT_HEIGHT=1080
+
+# Activa el motor V2 (scene graph sin plantillas cerradas)
+USE_SCENE_GRAPH=false
