--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,14 @@
   "builds": [
     {
       "src": "server/index.js",
-      "use": "@vercel/node"
+      "use": "@vercel/node",
+      "config": {
+        "includeFiles": [
+          "public/**",
+          "remotion/**",
+          "server-v2/**"
+        ]
+      }
     }
   ],
   "routes": [
