--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@remotion/bundler": "^4.0.332",
     "@remotion/renderer": "^4.0.332",
+    "@vercel/blob": "^1.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
