--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18.3.1",
     "remotion": "^4.0.332",
     "uuid": "^10.0.0",
+    "ytdl-core": "^4.11.5",
     "zod": "^3.23.8"
   }
 }
