Harden YouTube ingest on Vercel: switch to @distube/ytdl-core with cookie-aware fallback

--- a/.env.example
+++ b/.env.example
@@ -20,3 +20,6 @@ DEFAULT_HEIGHT=1080
 
 # Activa el motor V2 (scene graph sin plantillas cerradas)
 USE_SCENE_GRAPH=false
+
+# Opcional: cookie de sesión YouTube para mejorar ingest en servidores cloud (si algunos enlaces devuelven 403/410)
+YOUTUBE_COOKIE=
