--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "remotion": "^4.0.332",
+    "@distube/ytdl-core": "^4.16.12",
     "uuid": "^10.0.0",
-    "ytdl-core": "^4.11.5",
     "zod": "^3.23.8"
   }
 }
