--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start": "node server/index.js"
   },
   "dependencies": {
+    "@distube/ytdl-core": "^4.16.12",
     "@remotion/bundler": "^4.0.332",
     "@remotion/renderer": "^4.0.332",
     "@vercel/blob": "^1.1.1",
@@ -20,8 +21,9 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "remotion": "^4.0.332",
-    "@distube/ytdl-core": "^4.16.12",
     "uuid": "^10.0.0",
+    "youtubei.js": "^16.0.1",
+    "yt-dlp-wrap": "^2.3.12",
     "zod": "^3.23.8"
   }
 }
