--- a/vercel.json
+++ b/vercel.json
@@ -8,7 +8,11 @@
         "includeFiles": [
           "public/**",
           "remotion/**",
-          "server-v2/**"
+          "server-v2/**",
+          "node_modules/remotion/**",
+          "node_modules/react/**",
+          "node_modules/react-dom/**",
+          "node_modules/@remotion/**"
         ]
       }
     }
